2010-09-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Speed up function.apply(..., arguments)
        https://bugs.webkit.org/show_bug.cgi?id=46207

        Add code to do argument copying inline in the case
        where we're using Function.apply to forward our arguments
        directly.

        * jit/JIT.cpp:
        (JSC::JIT::privateCompileSlowCases):
           Splitted op_load_varargs into fast and slow paths, so add the call
           to the slow path generator.
        * jit/JIT.h:
        * jit/JITCall32_64.cpp:
          Remove 32bit specific emit_op_load_varargs as the logic is the
          same for all value representations
        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_load_varargs):
          Copy arguments inline
        (JSC::JIT::emitSlow_op_load_varargs):

2010-09-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        <rdar://problem/8363003> REGRESSION: ~1.4% sunspider regression in
        interpreter due to 54724 and 54596
        
        Fixed a typo (using "UNLIKELY" instead of "LIKELY").
        
        * wtf/PassRefPtr.h:
        (WTF::refIfNotNull):
        (WTF::derefIfNotNull): It is likely that m_ptr != 0 because most RefPtrs
        hold real data. Also, in cases where they do not hold real data, the
        compiler usually sees a call to release() right before the call to the
        destructor, so it can probably optimize out the test completely.

2010-09-21  Fridrich Strba  <fridrich.strba@bluewin.ch>

        Reviewed by Martin Robinson.

        Build issues with Windows versions of the GTK+ port
        https://bugs.webkit.org/show_bug.cgi?id=45844

        Link with winmm.dll when necessary and specify the executable extension
        explicitely so that the Programs/jsc-@WEBKITGTK_API_MAJOR_VERSION@
        rule actually works.

        Don't try to build the ThreadSpecificWin.cpp since GTK+ port uses
        a section in ThreadSpecific.cpp
